Makefile.compile: fix not begin with _start()
* without -fno-reorder-functions, x86-navy may place other functions at
  the beginning of the object file, but nanos-lite requires _start() to be
  the first function, else the loader can not find the correct entry

--- a/Makefile.compile
+++ b/Makefile.compile
@@ -41,7 +41,7 @@ ASFLAGS  += -march=mips32 -EL -mno-check-zero-division -O0 -mno-abicalls -fno-pi
 endif
 
 ifeq ($(ISA), x86)
-CFLAGS_COMMON += -m32 -fno-pic -fno-omit-frame-pointer -march=i386 -mstringop-strategy=loop
+CFLAGS_COMMON += -m32 -fno-pic -fno-omit-frame-pointer -march=i386 -mstringop-strategy=loop -fno-reorder-functions
 ASFLAGS  += -m32
 endif
 
