Makefile.compile: remove -fno-strict-aliasing for mips32

--- a/Makefile.compile
+++ b/Makefile.compile
@@ -36,7 +36,7 @@ ASFLAGS  += -fpie -pie
 endif
 
 ifeq ($(ISA), mips32)
-CFLAGS_COMMON += -fno-pic -static -fno-strict-aliasing -fno-delayed-branch -mno-abicalls -march=mips32 -mno-check-zero-division -EL -mno-llsc -mno-imadd -mno-mad
+CFLAGS_COMMON += -fno-pic -static -fno-delayed-branch -mno-abicalls -march=mips32 -mno-check-zero-division -EL -mno-llsc -mno-imadd -mno-mad
 ASFLAGS  += -march=mips32 -EL -mno-check-zero-division -O0 -mno-abicalls -fno-pic -fno-delayed-branch
 endif
 
