--- a/Makefile.compile
+++ b/Makefile.compile
@@ -87,6 +87,6 @@ DEPS = $(addprefix $(DST_DIR)/, $(addsuffix .d, $(basename $(SRCS))))
 # Dependent AM and libraries
 .PHONY: $(LIBS) am
 am:
-	@$(MAKE) -C $(AM_HOME)
+	@$(MAKE) -s -C $(AM_HOME)
 $(sort $(LIBS)): %:
-	@$(MAKE) -C $(AM_HOME)/libs/$*
+	@$(MAKE) -s -C $(AM_HOME)/libs/$*
