--- a/am/src/x86/qemu/boot/Makefile
+++ b/am/src/x86/qemu/boot/Makefile
@@ -1,7 +1,10 @@
+$(info Building bootblock [$(ARCH)])
+
 mbr: start.S main.c
-	gcc -nostdlib -Os start.S main.c -m32 -Ttext 0x7C00 -o bootblock.o
+	@echo + CC start.S main.c
+	@gcc -nostdlib -Os start.S main.c -m32 -Ttext 0x7C00 -o bootblock.o
 	@objcopy -S -O binary -j .text bootblock.o mbr
 	@perl genboot.pl mbr
 
 clean:
-	rm -rf bootblock *.o
+	rm mbr -rf bootblock *.o
