am,x86-nemu: use ISA variable

--- a/Makefile.check
+++ b/Makefile.check
@@ -11,4 +11,8 @@ ifeq ($(filter $(ARCHS), $(ARCH)), ) # ARCH must be valid
 $(error Invalid ARCH. Supported: $(ARCHS))
 endif
 
+ARCH_SPLIT  = $(subst -, ,$(ARCH))
+ISA        ?= $(word 1,$(ARCH_SPLIT))
+PLATFORM   ?= $(word 2,$(ARCH_SPLIT))
+
 endif
