--- a/am/Makefile
+++ b/am/Makefile
@@ -1,6 +1,6 @@
 NAME := am
 LIBS := klib
 include $(AM_HOME)/Makefile.check
-include arch/$(ARCH).mk
+-include arch/$(ARCH).mk
 SRCS := $(addprefix src/, $(AM_SRCS))
 include $(AM_HOME)/Makefile.lib
