--- a/Makefile.compile
+++ b/Makefile.compile
@@ -69,15 +69,15 @@ OBJS = $(addprefix $(DST_DIR)/, $(addsuffix .o, $(basename $(SRCS))))
 $(DST_DIR)/%.o: %.cpp
 	@echo + CXX $<
 	@mkdir -p $(dir $@)
-	@$(CXX) $(CXXFLAGS) -c -o $@ $<
+	@$(CXX) $(CXXFLAGS) -c -o $@ $(realpath $<)
 $(DST_DIR)/%.o: %.c
 	@echo + CC $<
 	@mkdir -p $(dir $@)
-	@$(CC) $(CFLAGS) -c -o $@ $<
+	@$(CC) $(CFLAGS) -c -o $@ $(realpath $<)
 $(DST_DIR)/%.o: %.S
 	@echo + AS $<
 	@mkdir -p $(dir $@)
-	@$(AS) $(ASFLAGS) -c -o $@ $<
+	@$(AS) $(ASFLAGS) -c -o $@ $(realpath $<)
 
 # Depencies
 DEPS = $(addprefix $(DST_DIR)/, $(addsuffix .d, $(basename $(SRCS))))
