x86-qemu, makefiles: fixes, remove x86 tracing (need redesign)

--- a/apps/litenes/Makefile
+++ b/apps/litenes/Makefile
@@ -1,3 +1,4 @@
 NAME = litenes
 SRCS = $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
+LIBS = klib
 include $(AM_HOME)/Makefile.app
