am: let `main()` to receive arguments
* add mainargs for x86-qemu, works good for litenes
* port microbench to mainargs
* fix native am
* fix litenes: not include generated .c
* restore back to main
* fix microbench at native
* start amtest, with interesting bug
* add unit test framework
* fix native archive removal

--- a/apps/litenes/Makefile
+++ b/apps/litenes/Makefile
@@ -1,4 +1,8 @@
-NAME = litenes
-SRCS = $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
-LIBS = klib
+NAME := litenes
+SRCS := $(shell find -L ./src/ -name "*.c")
+ROMS := $(shell find -L ./src/ -name "*.nes")
+PREBUILD := src/roms/gen/roms.h
 include $(AM_HOME)/Makefile.app
+
+src/roms/gen/roms.h: $(ROMS)
+	@cd src/roms && python3 build-roms.py
