--- a/Makefile.compile
+++ b/Makefile.compile
@@ -16,23 +16,28 @@ CFLAGS   += -O2 -MMD -Wall -Werror -ggdb $(INCLUDES) \
             -DARCH_H=\"arch/$(ARCH).h\" \
             -fno-asynchronous-unwind-tables -fno-builtin -fno-stack-protector \
 			-Wno-main
+CXXFLAGS +=  $(CFLAGS) -ffreestanding -fno-rtti -fno-exceptions
+ASFLAGS  += -MMD $(INCLUDES)
 
+## Compliation rule for .c -> .o (using gcc)
 $(DST_DIR)/%.o: %.c
 	@mkdir -p $(dir $@) && echo + CC $<
 	@$(CC) -std=gnu11 $(CFLAGS) -c -o $@ $(realpath $<)
 
+## Compliation rule for .cpp -> .o (using g++)
 $(DST_DIR)/%.o: %.cpp
 	@mkdir -p $(dir $@) && echo + CXX $<
-	@$(CXX) -std=c++11 -ffreestanding -fno-rtti -fno-exceptions $(CXXFLAGS) $(CFLAGS) -c -o $@ $(realpath $<)
+	@$(CXX) -std=c++11 $(CXXFLAGS) -c -o $@ $(realpath $<)
 
+## Compliation rule for .S -> .o (using as)
 $(DST_DIR)/%.o: %.S
 	@mkdir -p $(dir $@) && echo + AS $<
-	@$(AS) -MMD $(INCLUDES) $(ASFLAGS) -c -o $@ $(realpath $<)
+	@$(AS) $(ASFLAGS) -c -o $@ $(realpath $<)
 
-# Dependencies (gcc generated .d)
+## Paste in dependencies (gcc generated .d) here
 -include $(addprefix $(DST_DIR)/, $(addsuffix .d, $(basename $(SRCS))))
 
-# Libraries
+## Compilation rules for libraries
 am:
 	@$(MAKE) -s -C $(AM_HOME)
 
