apps,fecux: add memory file

--- a/apps/fceux/Makefile
+++ b/apps/fceux/Makefile
@@ -2,11 +2,11 @@ NAME := fceux
 SRCS := $(shell find -L ./src/ -name "*.c" -o -name "*.cpp")
 ROMS := $(shell find -L ./src/ -name "*.nes")
 
-CFLAGS += -DPSS_STYLE=1
+CFLAGS += -DPSS_STYLE=1 -DFRAMESKIP -D__NO_FILE_SYSTEM__
 LDFLAGS += -lSDL
 #PREBUILD := rom
 include $(AM_HOME)/Makefile.app
 
 .PHONY: rom
-#rom: $(ROMS)
-#	@cd src/roms && python3 build-roms.py
+rom: $(ROMS)
+	@cd src/roms && python3 build-roms.py
