riscv64-asic: adjust tests

--- a/Makefile.compile
+++ b/Makefile.compile
@@ -9,7 +9,7 @@ OBJDUMP   = $(CROSS_COMPILE)objdump
 OBJCOPY   = $(CROSS_COMPILE)objcopy
 READELF   = $(CROSS_COMPILE)readelf
 INCLUDES  = $(addprefix -I, $(INC_DIR)) -I$(AM_HOME)/am/
-INCLUDES += -I$(AM_HOME)/am/include
+INCLUDES += -I$(AM_HOME)/am/include -I$(RISCV)/riscv64-unknown-elf/include/riscv-pk
 CFLAGS   += -O2 -MMD -Wall -Werror -ggdb $(INCLUDES) \
             -D__ISA__=\"$(ISA)\" -D__ISA_$(shell echo $(ISA) | tr a-z A-Z)__ \
             -D__ARCH__=$(ARCH) -D__ARCH_$(shell echo $(ARCH) | tr a-z A-Z | tr - _) \
