--- a/libs/klib/Makefile
+++ b/libs/klib/Makefile
@@ -1,8 +1,3 @@
 NAME = klib
-SRCS = src/stdio.c \
-       src/string.c \
-       src/cpp.c \
-       src/stdlib.c \
-       src/io.c \
-       src/int64.c
+SRCS = $(shell find src/ -name "*.c")
 include $(AM_HOME)/Makefile.lib
