apps,litenes: move roms to $(AM_HOME)/share/games/nes

--- a/Makefile.compile
+++ b/Makefile.compile
@@ -8,7 +8,7 @@ LD        = $(CROSS_COMPILE)ld
 OBJDUMP   = $(CROSS_COMPILE)objdump
 OBJCOPY   = $(CROSS_COMPILE)objcopy
 READELF   = $(CROSS_COMPILE)readelf
-INCLUDES  = $(addprefix -I, $(INC_DIR)) -I$(AM_HOME)/am/
+INCLUDES += $(addprefix -I, $(INC_DIR)) -I$(AM_HOME)/am/
 INCLUDES += -I$(AM_HOME)/am/include
 CFLAGS   += -O2 -MMD -Wall -Werror -ggdb $(INCLUDES) \
             -D__ISA__=\"$(ISA)\" -D__ISA_$(shell echo $(ISA) | tr a-z A-Z)__ \
