--- a/apps/fceux/Makefile
+++ b/apps/fceux/Makefile
@@ -1,11 +1,13 @@
 NAME := fceux
-SRCS := $(shell find -L ./src/ -name "*.c" -o -name "*.cpp")
-ROMS := $(shell find -L ./src/ -name "*.nes")
+
+ROM_PATH := $(AM_HOME)/share/games/nes
+ROM_SRC := $(shell find -L $(ROM_PATH)/gen/ -name "*.c")
+INCLUDES += -I$(ROM_PATH)/gen/
+SRCS := $(shell find -L ./src/ -name "*.c" -o -name "*.cpp") $(ROM_SRC)
 
 CFLAGS += -DPSS_STYLE=1 -DFRAMESKIP -D__NO_FILE_SYSTEM__
-#PREBUILD := rom
 include $(AM_HOME)/Makefile.app
 
 .PHONY: rom
 rom: $(ROMS)
-	@cd src/roms && python3 build-roms.py
+	@cd $(ROM_PATH) && python3 build-roms.py
