--- a/apps/litenes/Makefile
+++ b/apps/litenes/Makefile
@@ -1,9 +1,10 @@
 NAME := litenes
-SRCS := $(shell find -L ./src/ -name "*.c")
-ROMS := $(shell find -L ./src/ -name "*.nes")
-PREBUILD := rom
+
+ROM_PATH := $(AM_HOME)/share/games/nes
+ROM_SRC := $(ROM_PATH)/gen/mario.c
+
+SRCS := $(shell find -L ./src/ -name "*.c") $(ROM_SRC)
 include $(AM_HOME)/Makefile.app
 
-.PHONY: rom
-rom: $(ROMS)
-	@cd src/roms && python3 build-roms.py
+$(ROM_SRC):
+	@cd $(ROM_PATH) && python3 build-roms.py
