--- a/tests/amtest/Makefile
+++ b/tests/amtest/Makefile
@@ -1,4 +1,4 @@
 NAME := amtest
-SRCS := $(shell find -L ./src/ -name "*.c")
+SRCS := $(shell find -L ./src/ -name "*.[cS]")
 
 include $(AM_HOME)/Makefile.app
