int-int-int loop test

--- a/apps/icomtest/Makefile
+++ b/apps/icomtest/Makefile
@@ -4,7 +4,8 @@ NAME_1 = icomtest
 #CHOOSET ?= 3
 CFLAGS +=-DCHOOSEO=$(CHOOSEO) -g 
 CFLAGS +=-DCHOOSET=$(CHOOSET) -g
-NAME =build-$(NAME_1)-$(CHOOSEO)-$(CHOOSET)
+CFLAGS +=-DCHOOSER=$(CHOOSER) -g
+NAME =build-$(NAME_1)-$(CHOOSEO)-$(CHOOSET)-$(CHOOSER)
 $(NAME).c:icomtest.c
 	cp icomtest.c $(NAME).c
 SRCS = $(NAME).c
