--- a/apps/fitest/Makefile
+++ b/apps/fitest/Makefile
@@ -2,10 +2,10 @@ NAME_1 = fitest
 CFLAGS +=-DCHOOSEO=$(CHOOSEO) -g 
 CFLAGS +=-DCHOOSET=$(CHOOSET) -g
 CFLAGS +=-DCHOOSER=$(CHOOSET) -g
-#CFLAGS +=-DCHOOSEF=$(CHOOSEF) -g
-#CFLAGS +=-DCHOOSEI=$(CHOOSEI) -g
-#NAME = build-$(NAME_1)-$(CHOOSEO)-$(CHOOSET)-$(CHOOSER)-$(CHOOSEF)-$(CHOOSEI)
-NAME = build-$(NAME_1)-$(CHOOSEO)-$(CHOOSET)-$(CHOOSER)
+CFLAGS +=-DCHOOSEF=$(CHOOSEF) -g
+CFLAGS +=-DCHOOSEI=$(CHOOSEI) -g
+NAME = build-$(NAME_1)-$(CHOOSEO)-$(CHOOSET)-$(CHOOSER)-$(CHOOSEF)-$(CHOOSEI)
+#NAME = build-$(NAME_1)-$(CHOOSEO)-$(CHOOSET)-$(CHOOSER)
 $(NAME).c:fitest.c
 	cp fitest.c $(NAME).c
 SRCS = $(NAME).c
