--- a/apps/maprobe/Makefile
+++ b/apps/maprobe/Makefile
@@ -1,3 +1,3 @@
 NAME = maprobe
-SRCS = common.c bitutils.c resultmat.c latency-test.c bandwidth-test.c main.c
+SRCS = common.c bitutils.c resultmat.c latency-test.c bandwidth-test.c replacement-test.c main.c
 include $(AM_HOME)/Makefile.app
