coremark: add three smaller tests size with known output.

--- a/apps/coremark/Makefile
+++ b/apps/coremark/Makefile
@@ -3,5 +3,8 @@ SRCS = $(shell find -L ./src/ -name "*.c")
 ifdef ITERATIONS
 CFLAGS += -DITERATIONS=$(ITERATIONS)
 endif
+ifdef TOTAL_DATA_SIZE
+CFLAGS += -DTOTAL_DATA_SIZE=$(TOTAL_DATA_SIZE)
+endif
 
 include $(AM_HOME)/Makefile.app
