support both ddr and cache test

--- a/apps/mem_test/mem_test_bw/Makefile
+++ b/apps/mem_test/mem_test_bw/Makefile
@@ -1,3 +1,8 @@
 NAME = mem_test_bw
 SRCS = mem_test_bw.cpp
+
+# default test type = mem
+TEST_TYPE ?= mem
+CFLAGS += -DTEST_TYPE=$(TEST_TYPE)
+
 include $(AM_HOME)/Makefile.app
